--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
+---
+
 # This runs Yelp's 'detect-secrets': https://github.com/Yelp/detect-secrets/blob/master/README.md
+
 name: Scan Code for Secrets
+
 on:
   pull_request:
-    - opened
-    - reopened
-    - ready_for_review
-    - synchronize
+    types: [opened, reopened, ready_for_review, synchronize]
   push:
     branches:
       - '**'
